add_subdirectory( build_helpers )
add_subdirectory( cli_wallet )
#add_subdirectory( genesis_util )
add_subdirectory( witness_node )

if (  GRAPHENE_DISABLE_BUSINESS_BUILD  ) 
else (GRAPHENE_DISABLE_BUSINESS_BUILD  ) 
if(UNIX)
add_subdirectory( delayed_node )
add_subdirectory( store_node )
endif()
#add_subdirectory( js_operation_serializer )
#add_subdirectory( size_checker )
endif( GRAPHENE_DISABLE_BUSINESS_BUILD )
